--- a/demo-shbs/Makefile
+++ b/demo-shbs/Makefile
@@ -5,10 +5,13 @@ all: build
 .PHONY: configure build
 
 configure:
-	cd ${BOTAN} && ./configure.py
+	cd ${BOTAN} && ./configure.py --prefix=.
 
 build: configure
 	cd ${BOTAN} && make
+
+install: build
+	cd ${BOTAN} && make install
 
 clean:
 	rm -rf ${BOTAN}
